--- a/views/register2.ejs
+++ b/views/register2.ejs
@@ -9,9 +9,10 @@
 <br>
 <form action="/register2" method="post">
    <%for (i=0; i<numpeople; i++) {%>
-    <label for="user_name">Enter username`3e    : </label><br>
-    <input id="user_name" type="text" name="username" value="Username"><br><br>
+    <label for="user_name">Enter email (Person #<%= i+1 %>) : </label><br>
+    <input id="user_name" type="text" name="username" value="email"><br><br>
     <% } %>
+    <input type="submit" value="OK">
 </form>
 </body>
 </html>
